--- a/myapp/templates/my_account.html
+++ b/myapp/templates/my_account.html
@@ -1,87 +1,52 @@
 {% extends 'index.html' %}
 {% block content %}
 {% load static %}        
-    
+{% load humanize %}
 
-    <!-- BEGIN #page-header -->
-        <!-- BEGIN #my-account -->
-        <div id="about-us-cover" class="section-container">
-            <!-- BEGIN container -->
-            <div class="container">
-                <!-- BEGIN breadcrumb -->
-                <ul class="breadcrumb m-b-10 f-s-12">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Store</a></li>
-                    <li class="active">My Account</li>
-                </ul>
-                <!-- END breadcrumb -->
+<div class="container mt">
+    <div class="container">
+        <ul class="breadcrumb m-b-10 f-s-14 bg-light p-3 rounded shadow-sm">
+            <li><a href="/">Home</a></li>
+            <li class="active">My Account</li>
+        </ul>
 
-                <!-- BEGIN account-container -->
-                <div class="account-container">
-                    <!-- BEGIN account-sidebar -->
-                    <div class="account-sidebar">
-                        <div class="account-sidebar-cover">
-                            <img src="{% static 'assets/img/my-account-cover.jpg' %}" alt="" />
-                        </div>
-                        <div class="account-sidebar-content">
-                            <h4>Your Account</h4>
-                            <p>
-                                Modify an order, track a shipment, and update your account info.
-                            </p>
-                            <p>
-                                All you need in one place. All with a few simple clicks.
-                            </p>
-                        </div>
-                    </div>
-                    <!-- END account-sidebar -->
-                    <!-- BEGIN account-body -->
-                    <div class="account-body">
-                        <!-- BEGIN row -->
-                        <div class="row">
-                            <!-- BEGIN col-6 -->
-                            <div class="col-md-6">
-                                <h4><i class="fa fa-gitlab fa-fw text-muted"></i> Orders</h4>
-                                
-                                <ul class="nav nav-list">
-                                    <li><a href="{% url 'order_tracking' %}">Check the status of an order</a></li>
-                                    <li><a href="#">Cancel items</a></li>
-                                    <li><a href="#">Return items</a></li>
-                                    <li><a href="#">Change shipping or billing info for an order</a></li>
-                                    <li><a href="#">Edit gift messaging or engraving</a></li>
-                                    <li><a href="{% url 'order-history' %}">View order history</a></li>
-                                </ul>
-
-                                <h4><i class="fa fa-universal-access fa-fw text-muted"></i> Account Settings</h4>
-                                <ul class="nav nav-list">
-                                    <li><a href="#">Update your email address and password</a></li>
-                                    <li><a href="#">Change your default shipping or billing info</a></li>
-                                    <li><a href="#">Manage email subscriptions</a></li>
-                                </ul>
-                            </div>
-                            <!-- END col-6 -->
-
-                            <!-- BEGIN col-6 -->
-                            <div class="col-md-6">
-                                <h4><i class="fa fa-cc-visa fa-fw text-muted"></i> Payments & Financing</h4>
-                                <ul class="nav nav-list">
-                                    <li><a href="#">Check the balance of a gift card</a></li>
-                                    <li><a href="#">Check the status of a rebate</a></li>
-                                </ul>
-                                <h4><i class="fa fa-wpforms fa-fw text-muted"></i> Specialists</h4>
-                                <ul class="nav nav-list">
-                                    <li><a href="#">View your previous activity</a></li>
-                                </ul>
-                            </div>
-                            <!-- END col-6 -->
-                        </div>
-                        <!-- END row -->
-                    </div>
-                    <!-- END account-body -->
-                </div>
-                <!-- END account-container -->
+        <div class="account-container shadow-sm p-5 mb-5 bg-white rounded">
+            <div class="account-body">
+                <h4 class="mb-4 text-center"><i class="fa fa-gitlab fa-fw text-muted"></i> Recent Order</h4>
+                
+                <table class="table table-bordered table-striped table-hover table-responsive-md text-center">
+                    <thead class="thead-light">
+                        <tr>
+                            <th class="align-middle">Product Name</th>
+                            <th class="align-middle">Quantity</th>
+                            <th class="align-middle">Total Price</th>
+                            <th class="align-middle">Tracking ID</th>
+                            <th class="align-middle">Order Placed Date</th>
+                            <th class="align-middle">Delivery Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% if order %}
+                            {% for ordered_item in order %}
+                                <tr>
+                                    <td class="align-middle">{{ ordered_item.product.product_name }}</td>
+                                    <td class="align-middle">{{ ordered_item.quantity }}</td>
+                                    <td class="align-middle">{{ ordered_item.total_price|floatformat:"2"|intcomma }}</td>
+                                    <td class="align-middle">{{ ordered_item.order_id }}</td>
+                                    <td class="align-middle">{{ ordered_item.created_at|date:"F j, Y" }}</td>
+                                    <td class="align-middle">{{ delivery_date|date:"F j, Y" }}</td>
+                                </tr>
+                            {% endfor %}
+                        {% else %}
+                            <tr>
+                                <td colspan="6" class="text-center">No recent orders found.</td>
+                            </tr>
+                        {% endif %}
+                    </tbody>
+                </table>
             </div>
-            <!-- END container -->
         </div>
-        <!-- END #about-us-cover -->
-        
+    </div>
+</div>
+
 {% endblock %}
