--- a/myapp/templates/order-status.html
+++ b/myapp/templates/order-status.html
@@ -9,10 +9,15 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            <br>
             <h2 class="text-center mb-4">Order Status</h2>
+            <hr>
+            
             <hr style="height:2px;border-width:0;color:gray;background-color:gray">
             <div class="table-responsive">
                 <table class="table table-bordered table-hover">
+                   
+               
                     <thead class="thead-dark">
                         <tr>
                             <th>S.No</th>
@@ -27,6 +32,7 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% if cart_items %}
                         {% for item in cart_items %}
                         <tr>
                             <td>{{ forloop.counter }}</td>
@@ -36,21 +42,31 @@
                             <td>Rs. {{ item.total_price|intcomma }}</td>
                             <td>{{ item.created_at | date:"d M Y" }}</td>
                             <td>{{ delivery_date | date:"d M Y" }}</td>
+
                             <td>
                                 {% if item.order_status < 4 %}
-                                <a href="#" class="btn btn-danger">Cancel Order</a>
+                                <a href="{% url 'cancel-order' item.id %}" class="btn btn-danger">Cancel Order</a>
                                 {% elif item.order_status == 4 %}
-                                <a href="#" class="btn btn-warning">Return Order</a>
+                                <a href="{% url 'return-order' item.id %}" class="btn btn-warning">Return Order</a>
                                 {% elif item.order_status == 5 %}
                                 <p class="text-success">Order Cancelled</p>
                                 {% endif %}
                             </td>
+
                             <td>
                                 <a href="{% url 'order_progress' pid=item.id %}" class="btn btn-primary"
                                     title="Track Status">Click Here!</a>
                             </td>
                         </tr>
+
                         {% endfor %}
+
+                       {% else %}
+                        <tr>
+                            <td colspan="9" class="text-center">No Orders Found</td>
+                        </tr>
+                    {% endif %}
+
                     </tbody>
                 </table>
             </div>
