--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -59,8 +59,21 @@
       >
         Login
       </button>
+      
+      <div class="text-center mt-3">
+        <p class="mb-0">or login with</p>
+        <div class="d-flex justify-content-center">
+          <a href="#" class="btn btn-outline-primary me-2">
+            <i class="fab fa-facebook-f"></i> Facebook
+          </a>
+          <a href="#" class="btn btn-outline-danger me-2">
+            <i class="fab fa-google"></i> Google
+          </a>
+        </div>
+      </div>
     </form>
   </div>
 </div>
+
 
 {% endblock %}
